[fix] AdminFunction 반환값